# un-semun-misc

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
data/: countries.xlsx  unbodies.csv
src/: countries.py  unbodies.py
